2006-12-01 Bart Hakvoort <hakvoort@cvs.gnome.org>

	* include/Dialog_Progress.h,
	  include/GParted_Core.h,
	  src/Dialog_Progress.cc,
	  src/GParted_Core.cc,
	  src/Win_GParted.cc: added libparted version string to details
	  export.

2006-11-26 Bart Hakvoort <hakvoort@cvs.gnome.org>
	
	* src/Win_GParted.cc: fixed bug with copying partition to a disk
	  without disklabel. Also added some FIXME's.
	
2006-11-26 Bart Hakvoort <hakvoort@cvs.gnome.org>

	* include/Makefile.am,
	  include/Operation.h,
	  include/Win_GParted.h,
	  src/GParted_Core.cc,
	  src/Makefile.am,
	  src/Win_GParted.cc,
	  include/OperationCheck.h (new),
	  src/OperationCheck.cc (new): added 'check' operation. The
	  functionality was already there, but it was not possible yet to
	  activate it from the gui.

2006-11-25  Chao-Hsiung Liao  <j_h_liau@yahoo.com.tw>
	
	* configure.in: Add "zh_HK" to ALL_LINGUAS.

2006-11-24 Bart Hakvoort <hakvoort@cvs.gnome.org>

	* src/GParted_Core.cc: fixed rare bug with modifying logical
	  partitions. (#368199)

2006-11-23 Bart Hakvoort <hakvoort@cvs.gnome.org>

	* configure.in: fixed issue with libparted detection (#330776)
	* src/GParted_Core.cc: add FIXME

2006-11-08  Matic Zgur  <mr.zgur@gmail.com>

	* configure.in: Added sl (Slovenian) to ALL_LINGUAS.

2006-11-01  Kjartan Maraas  <kmaraas@gnome.org>

	* configure.in: Added nb to ALL_LINGUAS.

2006-10-22 Bart Hakvoort <hakvoort@cvs.gnome.org>

	* src/Dialog_Progress.cc: gtk+-2.10 seems to return the last valid
	  iterator if get_iter is executed with an invalid treepath. This is
	  different from gtk+-2.8 and gave some problems in the
	  operationdetails. I added a check to make it work in both
	  situations.

2006-10-01 Bart Hakvoort <hakvoort@cvs.gnome.org>

	* src/GParted_Core.cc: only add mountpoints and paths if they exist
	* src/reiser4.cc: don't show '<none>' if volumelabel is empty

2006-10-01 Bart Hakvoort <hakvoort@cvs.gnome.org>

	* src/GParted_Core: Replaced std::abs with llabs (see #357691)