@@ -1,5 +1,9 @@
 2006-12-01 Bart Hakvoort <hakvoort@cvs.gnome.org>
 
+	* src/Partition.cc: fixed issue with overloaded ==
+
+2006-12-01 Bart Hakvoort <hakvoort@cvs.gnome.org>
+
 	* include/Dialog_Progress.h,
 	  include/GParted_Core.h,
 	  src/Dialog_Progress.cc,
